data/derived/fa15/progs/unify/prog2802.ml.out
Characters 135-136:
  let seen' = if List.mem h t then h else t in
                                          ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
